添加PDF显示示例；改变image-resizer为CoreImage实现

--- a/image resizer/image resizer/config.json
+++ b/image resizer/image resizer/config.json
@@ -8,6 +8,7 @@
     "\t-s\tsize of the resized image. You can set more than size option divided by space .",
     "\t-cfg\tcustom config file path. A json file and must contain key named 'images' with value typed array with object that contain key named size with value like 128*128 or 128 .",
     "\t-u\tuse of the resized images . This option can be 'icon' or 'lanuchimage (ingore case). If set this option, option -s and -cfg will be ingored .",
+    "\t-i\tshow resize infomation",
     "Discussion : \n\tThe output image file has same name with the source image but append it's size pixel and type named png ."
   ],
   "options": {
@@ -15,5 +16,7 @@
     "-s": "size",
     "-cfg": "config_file",
     "-u": "use_type"
-  }
+  },
+  "icon":[],
+  "lanuchimage":[]
 }
