--- a/EasyKeyboard/EWubi/Info.plist
+++ b/EasyKeyboard/EWubi/Info.plist
@@ -3,7 +3,7 @@
 <plist version="1.0">
 <dict>
 	<key>CFBundleDevelopmentRegion</key>
-	<string>en</string>
+	<string>zh</string>
 	<key>CFBundleDisplayName</key>
 	<string>EWubi</string>
 	<key>CFBundleExecutable</key>
@@ -27,11 +27,11 @@
 		<key>NSExtensionAttributes</key>
 		<dict>
 			<key>IsASCIICapable</key>
-			<false/>
+			<true/>
 			<key>PrefersRightToLeft</key>
 			<false/>
 			<key>PrimaryLanguage</key>
-			<string>en-US</string>
+			<string>zh-Hans</string>
 			<key>RequestsOpenAccess</key>
 			<false/>
 		</dict>
